gitops/apps/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation-service
  labels:
    app: evaluation-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
        tier: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: evaluation-service
          image: 929265854968.dkr.ecr.us-east-1.amazonaws.com/togglemaster/evaluation-service:27d56dd5e79d58d29efc5ff668a0080f1c3de45f
          imagePullPolicy: Always
          ports:
            - containerPort: 8004
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
